# rt-backend-beacon

./: .gitignore  .gitmodules  CONTRIBUTING.md  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ghcr_upload.yml
core/: __init__.py  log.py  utils.py
core/shard/: __init__.py  error.py  pool.py
