[project]
name = "rt-beacon"
version = "0.0.0"
requires-python = ">= 3.11"
dependencies = [
    "ipcs~=0.1.5.post1",
    "backoff~=2.2.1",
    "frozenlist~=1.3.3",
]

[tool.rye.workspace]
members = ["core/rextlib", "core/common"]

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
