[project]
name = "rt-beacon"
version = "0.0.0"
classifiers = [
    "Private :: Do Not Upload",
    "Topic :: System",
    "Typing :: Typed",
    "Framework :: AsyncIO"
]
requires-python = ">= 3.11"
dependencies = [
    "ipcs~=0.2.0",
    "backoff~=2.2.1",
    "frozenlist~=1.4.0",
]

[tool.rye.workspace]
members = ["core/rextlib", "core/common"]

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
